# soogo

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/: gosac.ipynb  optimization.ipynb  socemo.ipynb
main/: .buildinfo  CONTRIBUTING.html  README.html  genindex.html  index.html  objects.inv  searchindex.js
main/_downloads/079962c730e6e61f3f9971f670e9cf70/: pyproject.toml
soogo/: sampling.py  termination.py  utils.py
tests/: gosac_benchmark.py  test_docs.py  test_examples.py  test_optimize.py  test_optimize_convergence.py  test_optimize_result.py  test_termination.py
v0.1.0/: .buildinfo
v0.2.0/: .buildinfo
v0.3.0/: .buildinfo
v0.3.1/: .buildinfo
v0.3.2/: .buildinfo
v0.4.0/: .buildinfo
v0.4.1/: .buildinfo
v0.4.2/: .buildinfo
v0.5.0/: .buildinfo  acquisition.html  blackboxopt.html  genindex.html  gp.html  index.html  objects.inv  optimize.html  problem.html  py-modindex.html  rbf.html  sampling.html  searchindex.js  tests.html  tests.vlse_benchmark.html
v0.5.1/: .buildinfo  acquisition.html  blackboxopt.html  genindex.html  gp.html  index.html  optimize.html  problem.html  py-modindex.html  rbf.html  sampling.html  searchindex.js  tests.html  tests.vlse_benchmark.html
v0.5.2/: .buildinfo  acquisition.html  blackboxopt.html  genindex.html  gp.html  index.html  objects.inv  optimize.html  problem.html  py-modindex.html  rbf.html  sampling.html  searchindex.js  tests.html  tests.vlse_benchmark.html
v1.0.0/: .buildinfo  acquisition.html  blackboxoptim.html  genindex.html  gp.html  index.html  objects.inv  optimize.html  problem.html  py-modindex.html  rbf.html  sampling.html  searchindex.js  tests.html  tests.vlse_benchmark.html
v1.0.1/: .buildinfo  acquisition.html  blackboxoptim.html  genindex.html  gp.html  index.html  optimize.html  problem.html  py-modindex.html  rbf.html  sampling.html  searchindex.js  tests.html  tests.vlse_benchmark.html
v1.1.0/: .buildinfo  acquisition.html  blackboxoptim.html  genindex.html  gp.html  index.html  objects.inv  optimize.html  problem.html  py-modindex.html  rbf.html  sampling.html  searchindex.js  tests.html  tests.vlse_benchmark.html
v1.2.0/: .buildinfo  acquisition.html  genindex.html  (+11 more)
(+265 files in other folders)
